# GM-SST

./: CMakeLists.txt  DOCUMENTATION.md  README.md  straw_vis.mac
exec/: main.cpp
include/: ActsShipField.hpp  MagneticFieldRegion.h  MaterialManager.h  ShipEDM.hpp  ShipFieldMap.h  ShipGeometry.hpp  ShipHitReader.hpp  ShipRecoContext.hpp  ShipSeeder.hpp  ShipStrawGeometry.hpp  ShipTrackFitter.hpp  ShipVertexer.hpp  StrawDrift.h  StrawTrackerBuilder.h  TrackerActionInitialization.h  TrackerDetectorConstruction.h  TrackerEventAction.h  TrackerHit.h  TrackerPrimaryGeneratorAction.h  TrackerRunAction.h  TrackerSD.h
scripts/: both.root  both2.root  dump_field.C  evdisplay.C  measure_momentum.C  momentum.root  run_scan.sh
src/: ActsShipField.cpp  MagneticFieldRegion.cpp  MaterialManager.cpp  SHiPMaterials.cpp  ShipFieldMap.cpp  ShipGeometry.cpp  ShipHitReader.cpp  ShipSeeder.cpp  ShipStrawGeometry.cpp  ShipTrackFitter.cpp  ShipVertexer.cpp  StrawTrackerBuilder.cpp  StrawTrackerBuilder_dumpStrawTable.cpp  TrackerActionInitialization.cpp  TrackerDetectorConstruction.cpp  TrackerEventAction.cpp  TrackerPrimaryGeneratorAction.cpp  TrackerRunAction.cpp  TrackerSD.cpp  run_reco.cpp
subsystems/Trackers/: test_trackers.cpp
tests/: README.md  anglescan.C  check_bending.C  check_orientation.C  evdisplay.C  pioncount.C  plot_field_vs_z.C  run_all.sh  summary.C
